# plan

./: .gitignore  LICENSE  eslint.config.mjs  package-lock.json  package-lock.json.backup  package.json  pyrightconfig.json  repomix-output.xml
.github/: dependabot.yml
.github/workflows/: lint.yml
backend/: .env.example  analysis_results.md  class_schedule.ics  constants.py  pyproject.toml  pytest.ini  python_fix.sh  requirements.txt
backend/certificates/: AAS.yaml  LAC-CLA.yaml  LAC-POR.yaml  LAC-SPA.yaml  RIS.yaml
backend/compass/: views.py
backend/config/: settings.py  urls.py
backend/data/: CourseEvaluations.csv  check_reqs.py  combine_course_data.py  configs.py  courses_api_responses_models.py  fetch_data.py  fetch_data.sh  fetch_evals.py  generate_summaries.py  generate_token.py  insert_data.py  insert_evals.py  insert_yamls.py  req_lib.py  transcript_to_json.py
backend/degrees/: AB.yaml  BSE.yaml
backend/hoagieplan/: apps.py  ical_generator.py  logger.py  models.py  serializers.py  utils.py
backend/hoagieplan/api/: almost_completed_reqs.py  details.py  model_getters.py  search.py  tutorial.py  upload.py  urls.py
backend/hoagieplan/api/auth/: auth.py  csrf.py
backend/hoagieplan/api/calendar/: calendar_configuration_view.py  calendar_event_view.py  configuration.py  ical_generator.py
backend/hoagieplan/api/dashboard/: almost_completed.py  almost_completed_api.py  almost_completed_reqs.py  comments.py  details.py  program_details_api.py  requirement_models.py  requirements.py  search.py  upload.py  utils.py
backend/hoagieplan/api/dashboard/windsor_approach/: __init__.py  api.py  test.py
backend/hoagieplan/api/profile/: info.py  tutorial.py
backend/hoagieplan/management/commands/: almost_completed.py  test_requirements.py  test_search_course.py
backend/hoagieplan/migrations/: 0012_remove_usercourses_requirement_and_more.py  0013_alter_semesterconfiguration_unique_together_and_more.py  0014_calendarevent_delete_usercalendarsection.py  0015_alter_calendarevent_unique_together.py  0016_delete_courseevaluations_and_more.py  0017_certificate_contacts_major_contacts_minor_contacts.py  0018_course_instructors.py  0018_coursecomment_courseevalsummary_and_more.py  0019_alter_customuser_email.py  0019_course_instructors.py  0020_course_instructors.py  0021_remove_section_instructor.py  0022_alter_requirement_name.py  0023_gradinginfo.py  0024_certificate_independent_work_minor_independent_work.py  0024_certificate_iw_required_minor_iw_required.py
backend/hoagieplan/tests/: requirements_test.py  search_courses.py  search_courses_test.py  test_almost_completed_reqs.py  test_real_user_almost_completed.py
backend/majors/: CEE.yaml  COM.yaml  COS-AB.yaml  COS-BSE.yaml  ECE.yaml  ENG.yaml  FIT.yaml  GEO.yaml  GER.yaml  LIN.yaml  MAT.yaml  PHY.yaml  PSY.yaml  SPI.yaml
backend/minors/: AAS.yaml  ARA.yaml  ART.yaml  CGS.yaml  CLA.yaml  CLS.yaml  DAN.yaml  FIT.yaml  FRE.yaml  HOA.yaml  ITA.yaml  JDS.yaml  LAS.yaml  LIN.yaml  MAT.yaml  NES.yaml  PER.yaml  PHY.yaml  POR.yaml  RES.yaml  SAS.yaml  SML.yaml  SPA.yaml  TRA.yaml  TUR.yaml  VPL.yaml
frontend/: .prettierrc.js  .prettierrc.mjs  eslint.config.js  eslint.config.mjs  middleware.ts  next.config.js  next.config.mjs  package-lock.json  package.json  sitemap.ts  tailwind.config.ts  tsconfig.json  types.d.ts  types.ts
frontend/api/: calendarService.ts  common.ts
frontend/app/: content.tsx  globals.css  globals.scss  hoagie.tsx  layout.tsx  page.tsx
frontend/components/: BackgroundGradient.tsx  CalendarTutorial.tsx  DashboardDroppableContainer.tsx  DashboardSearchResults.tsx  DashboardSkeleton.tsx  DashboardTutorial.tsx  Hero.tsx  LoadingComponent.tsx  MajorMinorSearch.tsx  Modal.tsx  Navbar.tsx  RecentSearches.tsx  ReviewMenu.tsx  Search.tsx  SettingsModal.tsx  SkeletonApp.tsx  (+3 more)
(+185 files in other folders)
